--- a/config/corne.conf
+++ b/config/corne.conf
@@ -7,6 +7,13 @@ CONFIG_ZMK_IDLE_TIMEOUT=30000
 # Milliseconds of inactivity before entering deep sleep	
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
+# Enable central reporting of split battery levels to hosts
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+
+# Enables/disables all battery level detection/reporting
+CONFIG_ZMK_BATTERY_REPORTING=y
+
+
 # Uncomment the following line to increase the keyboard's wireless range
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
