--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,5 +1,7 @@
 # Uncomment the following line to enable deep sleep
 CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_PM_SOFT_OFF=y
+CONFIG_ZMK_EXT_POWER=n
 
 # Milliseconds of inactivity before entering idle state
 CONFIG_ZMK_IDLE_TIMEOUT=30000
@@ -9,10 +11,11 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
 
 # Enable central reporting of split battery levels to hosts
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 # Enables/disables all battery level detection/reporting
+CONFIG_BT_BAS=n
 CONFIG_ZMK_BATTERY_REPORTING=y
-
 
 # Uncomment the following line to increase the keyboard's wireless range
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
